@@ -46,7 +46,7 @@ from wxPython.wx import *
 # matplotlib system
 import matplotlib
 matplotlib.use('WXAgg')
-matplotlib.rcParams['numerix'] = 'numarray'
+matplotlib.rcParams['numerix'] = 'numpy'
 
 # itrade system
 from itrade_logging import *
